arreglos de jiren.img

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="grid-item"><img src="./recusos/Grand_priest.webp" alt="priest">
                 <p>no es popular</p>
             </div>
-            <div class="grid-item"><img src="./recusos/jiren.webp" alt="jiren">
+            <div class="grid-item"><img src="/recusos/Jiren.webp" alt="jiren">
                 <p>no es popular</p>
             </div>
             <div class="grid-item"><img src="./recusos/Lunch_traje_de_sirvienta_en_el_manga.webp" alt="npi">
